--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <main [@routeAnimations]="prepareRouteOutlet(outlet)" class="content">
     <router-outlet #outlet="outlet" name="sidebar"></router-outlet>
 </main>
+<lib-ng-toast></lib-ng-toast>
