--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -1,21 +1,22 @@
 <ild-layout></ild-layout>
 <div class="connexion">
     <div class="tab-login shadow">
-        <div class="form-part shadow-sm">
+        <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)" class="form-part shadow-sm">
             <div class="form-part-head fs-4">Se Connecter</div>
             <div class="form-part-body">
                 <div>
                     <label for="">login</label>
-                    <input type="email" name="" id="" class="form-control">
+                    <input formControlName="login" placeholder="Entrer Votre Email" type="email" name="" id="" class="form-control">
                 </div>
                 <div>
                     <label for="">Password</label>
-                    <input type="password" name="" id="" class="form-control">
+                    <input formControlName="password" placeholder="Entrer Votre Password" type="password" name="" id="" class="form-control">
                 </div>
-
-                <button class="btn">Connexion</button>
+                <!-- <ng-container *ngIf="myForm.get('login')?.invalid">{{sendMessError("Veuillez remplir l'email")}}</ng-container>
+                <ng-container *ngIf="myForm.get('password')?.invalid,sendMessError('Password Invalid')"></ng-container> -->
+                <button type="submit" [disabled]="myForm.invalid" class="btn">Connexion</button>
             </div>
-        </div>
+        </form>
         <div class="text-part">
             <span class="bz">Brazil Burger</span><br><br>
             <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolore officiis autem omnis, magnam similique dolorem. Consequatur, beatae nam, necessitatibus perferendis impedit illo sint repudiandae placeat omnis aspernatur, possimus voluptas?</p>
