--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,19 +1,21 @@
 <div class="header {{showNav}} d-flex flex-row justify-content-between align-items-center p-3 bg-dark ">
     <div class="left fs-3 text-light">Brasil Burger</div>
     <ng-container *ngIf="isConnected">
-        <div class="text-center d-flex justify-content-center align-items-center">
-            <div class="icon text-center d-flex justify-content-center align-items-center" placement="bottom" ngbTooltip="Profil">
+        <div ngbDropdown class="text-center d-flex justify-content-center align-items-center">
+            <div  ngbDropdownToggle  id="dropdownBasic1" class="after: icon text-center d-flex justify-content-center align-items-center" placement="bottom" ngbTooltip="Profil">
                 <img src="https://fakeimg.pl/60x60/?retina=1&text=LANG&font=noto" alt="">
+                <div  ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                    <button class="btn h-1/2 hover:bg-orange-400 rounded-none" ngbDropdownItem>Parametres</button>
+                    <button (click)="logout()" class="btn h-1/2 hover:bg-orange-400 rounded-none" ngbDropdownItem>Deconnexion</button>
+                </div>  
             </div>
         </div>
     </ng-container>
     <div class="f-right d-flex flex-row align-items-center justify-content-end ps-5">
+            <a routerLink="/client/produit" class="btn-commandes text-light fs-6 text-center" >Catalogue</a>
         <ng-container *ngIf="isConnected,then content else other_content "></ng-container>
         <ng-template #content>
-            <ng-container *ngIf="showTwo">
-                <a routerLink="/client/produit" class="btn-commandes text-light fs-6 text-center" >Catalogue</a>
-            </ng-container>
-                <a routerLink="{{linkUri}}" class="btn-commandes text-light fs-6 text-center" >{{linkText}}</a>
+            <a routerLink="{{linkUri}}" class="btn-commandes text-light fs-6 text-center" >{{linkText}}</a>
         </ng-template>
         
         <ng-template #other_content >
@@ -23,7 +25,7 @@
         
         <div routerLink="/client/panier" class="right d-flex justify-content-center align-items-center" placement="left" ngbTooltip="Panier de commande">
             <span class="d-flex justify-content-center align-items-center"><i class="bi bi-cart-fill"></i></span>
-            <span class="nbr-produits d-flex justify-content-center align-items-center">1</span>
+            <span class="nbr-produits d-flex justify-content-center align-items-center">{{(commande$|async)?.commandeProduits?.length}}</span>
         </div>
     </div>
 </div>
