--- a/src/app/produit/components/menu-boisson/menu-boisson.component.html
+++ b/src/app/produit/components/menu-boisson/menu-boisson.component.html
@@ -3,7 +3,7 @@
         <span>{{menuTaille?.taille?.prix}} FCFA</span>
         <span>{{menuTaille?.taille?.libelle}} x {{menuTaille?.quantite}}</span>
         <ng-container *ngIf="block">
-            <span class="text-green-500 font-bold" >Choix Complets</span>
+            <span class="text-dark-900 bg-green-500 font-bold text-sm border-2 border-dark-600 rounded-2xl" >Choix Complets</span>
         </ng-container>
     </div>
     <div class="boissons">
