--- a/src/app/produit/components/card-boisson-menu/card-boisson-menu.component.html
+++ b/src/app/produit/components/card-boisson-menu/card-boisson-menu.component.html
@@ -1,4 +1,4 @@
-<div class="boisson shadow-sm">
+<div class="boisson shadow">
     <div (click)="checkbox.checked === false  ? checkbox.checked = true : checkbox.checked = false" (click)="changeVal()" #bgImg>
         <input #checkbox type="checkbox" name="" id="">
     </div>
