--- a/src/app/produit/components/menu-boisson/menu-boisson.component.html
+++ b/src/app/produit/components/menu-boisson/menu-boisson.component.html
@@ -1,7 +1,8 @@
-<div class="choice-taille">
-    <div class="taille">
+<div class="choice-taille my-2">
+    <div class="taille text-dark-900 shadow border-2 rounded-xl">
         <span>{{menuTaille?.taille?.prix}} FCFA</span>
-        <span>{{menuTaille?.taille?.libelle}} x {{menuTaille?.quantite}}</span>
+        <span class="">{{menuTaille?.taille?.libelle}}</span>
+        <span class="mt-3 px-4 h-max rounded-full bg-green-600 text-light font-bold">{{tot}}</span>
         <ng-container *ngIf="block">
             <span class="text-dark-900 bg-green-500 font-bold text-sm border-2 border-dark-600 rounded-2xl" >Choix Complets</span>
         </ng-container>
