--- a/src/app/layout/nav/nav.component.css
+++ b/src/app/layout/nav/nav.component.css
@@ -1,26 +1,7 @@
-.admin {
+.nav-component {
+    display: flex;
     width: 100vw;
-    min-height: 100vh;
-    display: flex;
-}
-
-.nav {
     height: 100vh;
-    width: 325px;
-    transition: all ease 0.35s;
-    border: 1px solid;
-    border-left: 0;
-}
-
-.nav.hide {
-    width: 95px;
-}
-
-.full-content {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .header-admin {
@@ -142,8 +123,18 @@
     margin: 0.35%;
 }
 
+
 .nav {
+    height: 100vh;
+    width: 325px;
+    transition: all ease 0.35s;
+    border: 1px solid;
+    border-left: 0;
     border: 2px solid rgba(0, 0, 0, 0.1) ;
+}
+
+.nav.hide {
+    width: 95px;
 }
 
 .nav-header {
@@ -173,22 +164,12 @@
 }
 
 .btn-choice:hover {
-    border: 2px solid #f44336;
+    border: 2px solid rgba(0, 136, 255, 0.725);
     box-shadow: 0 1px 1px 0.5px rgba(0, 0, 0, 0.3);
     transform: rotate3d(0,0.5,0,-10deg);
 
 }
 
 .btn-choice:hover .text {
-    color: #f44336;
-}
-
-.content {
-    width: 100%;
-    height: 92.75vh;
-    overflow-y: scroll;
-}
-
-.status {
-    border: 2px solid #f44336;
+    color: rgba(0, 136, 255, 0.725);
 }
