--- a/src/app/produit/pages/ajout-list-produit/ajout-list-produit.component.css
+++ b/src/app/produit/pages/ajout-list-produit/ajout-list-produit.component.css
@@ -14,7 +14,11 @@
 }
 
 .list {
-    height: 80vh;
+    min-height: 80vh;
+}
+.mat-tab {
+    height: 100%;
+    width: 100%;
 }
 
 .form {
@@ -25,18 +29,37 @@
     padding: 1%;
 }
 
-.form-head {
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.imagePreview {
+    width: 80%;
+    height: 70%;
 }
 
-.form-head {
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.submit-btn {
+    border: 2px solid #f44336;
+    color: #f44336;
+    top: 35%;
 }
+
+.submit-btn-menu {
+    top : 0;
+}
+
+.submit-btn:hover {
+    background-color: #f44336;
+    color: white;
+    font-weight: 600;
+}
+
+.menuComponents {
+    height: 60%;
+    display: flex;
+}
+
+.menuComponents-2 {
+    height: 100%;
+    width: 65em;
+    overflow-x: auto;
+    overflow-y: hidden;
+    display: flex;
+}
+
