--- a/src/app/client/panier/panier.component.html
+++ b/src/app/client/panier/panier.component.html
@@ -37,7 +37,7 @@
                         <select formControlName="quartier" name="" id="" class="form-control">
                             <option value="" checked>Choisir la zone</option>
                             <ng-container *ngFor="let quartier of quartiers$|async">
-                                <option value="{{(quartiers$|async)?.indexOf(quartier)}}">{{quartier.zone?.libelle + " " + quartier.libelle}}</option>
+                                <option value="{{quartier.id}}">{{quartier.zone?.libelle + " " + quartier.libelle + " " + quartier.zone?.montantLivraison + "FCFA"}}</option>
                             </ng-container>
                         </select>
                     </div>
@@ -69,7 +69,7 @@
             </span>
         </div>
         <div class="valider">
-            <button [disabled]="!isCollapsed && myForm.invalid" type="submit" (click)="validCommande()" class="btn btn-success bg-green-700 px-5">Valider</button>
+            <button [disabled]="(!isCollapsed && myForm.invalid) || (commande$ |async)?.commandeProduits?.length == 0" type="submit" (click)="validCommande()" class="btn btn-success bg-green-700 px-5">Valider</button>
         </div>
     </div>
 </div>
