--- a/src/app/produit/pages/ajout-list-produit/ajout-list-produit.component.css
+++ b/src/app/produit/pages/ajout-list-produit/ajout-list-produit.component.css
@@ -2,6 +2,7 @@
     height: 130vh;
     width: 100%;
     padding: 2%;
+    padding-top: 0%;
 }
 
 .mat-primary {
@@ -9,13 +10,14 @@
    }
 
 .new {
-    height: 50vh;
-
+    height: max-content;
 }
 
 .list {
-    min-height: 80vh;
+    width: 100%;
+    padding-top: 1%;
 }
+
 .mat-tab {
     height: 100%;
     width: 100%;
@@ -30,8 +32,8 @@
 }
 
 .imagePreview {
-    width: 80%;
-    height: 70%;
+    width: 10em;
+    height: 8em;
 }
 
 .submit-btn {
@@ -51,7 +53,6 @@
 }
 
 .menuComponents {
-    height: 60%;
     display: flex;
 }
 
@@ -63,3 +64,105 @@
     display: flex;
 }
 
+.table-container {
+    width: 100%;
+    height: 78vh;
+}
+
+.table-container>table {
+    width: 100%;
+    padding: 0.25em;
+}
+
+.table-container>table thead {
+    height: 4em;
+    border-radius: 0.25em;
+    border: 0.2em solid gray ;
+}
+
+.table-container>table tbody {
+    border: 0.2em solid gray;
+}
+
+.table-container>table tbody tr {
+    border: 0.1em solid gray ;
+    padding: 1em;
+}
+
+.table-container>table thead th {
+    padding-left: 3em;
+}
+
+.table-container>table tbody td {
+    padding: 2em 0.75em;
+    margin: 0.25em 0;
+    padding-left: 3em;
+    transition: all ease 0.5s;
+}
+
+.etat {
+    height: 60px;
+    border-radius: 15px;
+    padding: 1% 3em;
+    position: relative;
+    top: 7.5px;
+    left: -25px;
+    transition: all ease 0.35S;
+}
+
+.table-container>table tbody tr:hover td:first-child img {
+    left: -10px;
+}
+
+@keyframes kony {
+    from {
+        top: 3px;
+    }
+
+    50%{
+        top: 6px;
+    }
+
+    to {
+        top: 3px;
+    }
+}
+
+.paginate>span {
+    font-weight: 500;
+    transition: all ease 0.25s;
+    position: relative;
+    top: 0;
+}
+
+.paginate>span:hover {
+    font-weight: bold;
+    top: 3px;
+}
+
+.td-img {
+    width: 100px;
+    height: 80px;
+    border-radius: 30% 40% 35% 45%;
+    transition: all ease 0.5s;
+}
+
+.table-container>table tbody tr:hover .td-img {
+    border-radius: 50%;
+}
+
+@keyframes kony2 {
+    from {
+        border-radius: 30% 40%;
+    }
+
+    33%{
+        border-radius: 40% 30%;
+    }
+
+    66%{
+        border-radius: 30% 40%;
+    }
+
+
+}
